fix(model): reject javac processor flags in raw compiler args